[tool.poetry]
name = "pie"
version = "0.0.8"
description = "Extract Indicators of Compromise (IOCs) from PDF documents"
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.5"
pdfplumber = "^0.7.4"
requests = "^2.28.1"
tld = "^0.12.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
