[tool.poetry]
name = "pie"
version = "0.0.9"
description = "Extracts text from PDF and searches for IOCs"
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
pdfplumber = "^0.8.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
